gitops/prod/devops-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-devops-app
  namespace: devops-app
  labels:
    app: eks-devops-app

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: eks-devops-app

  template:
    metadata:
      labels:
        app: eks-devops-app

    spec:
      containers:
        - name: eks-devops-app
          image: 866705901512.dkr.ecr.ap-south-1.amazonaws.com/eks-devops-app:0d66c5226b206e26d29dc308a46ba9e7e7e1e491
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
