gitops/prod/devops-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-devops-app
  namespace: devops-app
spec:
  type: ClusterIP
  selector:
    app: eks-devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
